[CONFIDENTIALITE] Ajoute la section pour contacter le DPD

--- a/front/confidentialite.html
+++ b/front/confidentialite.html
@@ -27,8 +27,8 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
     Gérer la liste de diffusion de la lettre d&#39;information de la solution.
   </li>
   <li>
-    Mettre en place un questionnaire à destination des parties prenantes de l'écosystème cyber 
-    pour amender le catalogue de la plateforme.
+    Mettre en place un questionnaire à destination des parties prenantes de
+    l'écosystème cyber pour amender le catalogue de la plateforme.
   </li>
 </ul>
 <h2>Quelles sont les données à caractère personnel que nous traitons ?</h2>
@@ -39,7 +39,8 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
   </li>
   <li>Données relatives au test de maturité : nom, prénom, adresse e-mail ;</li>
   <li>
-    Données relatives au questionnaire : nom, prénom, adresse e-mail, numéro de téléphone (facultatif)
+    Données relatives au questionnaire : nom, prénom, adresse e-mail, numéro de
+    téléphone (facultatif)
   </li>
   <li>
     Données relatives à la lettre d&#39;information : nom, prénom, adresse
@@ -161,7 +162,9 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
     </tr>
     <tr>
       <td data-label="Sous-traitant">Tally</td>
-      <td data-label="Traitement réalisé">Outil de mise en place du questionnaire</td>
+      <td data-label="Traitement réalisé">
+        Outil de mise en place du questionnaire
+      </td>
       <td data-label="Pays destinataire">Belgique</td>
       <td data-label="Garanties">
         <a href="https://tally.so/help/data-processing-agreement"
@@ -215,16 +218,35 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
     >).
   </li>
 </ul>
-<p>Vous pouvez exercer vos droits en contactant l&#39;ANSSI :</p>
+<p>Vous pouvez exercer vos droits en contactant l&#39;ANSSI&nbsp;:</p>
 <ul>
   <li>
     par courriel à l&#39;adresse suivante :
     <a href="mailto:lab-inno@ssi.gouv.fr">lab-inno@ssi.gouv.fr</a>
   </li>
   <li>
-    par courrier postal à l&#39;adresse suivante :<br />Agence nationale de la
-    sécurité des systèmes d&#39;information<br />À l&#39;attention du Lab
-    Inno<br />51 boulevard de la Tour-Maubourg<br />75007 PARIS 07 SP
+    par courrier postal à l&#39;adresse suivante :
+    <address>
+      Agence nationale de la sécurité des systèmes d&#39;information<br />
+      À l&#39;attention du Lab Inno<br />
+      51 boulevard de la Tour-Maubourg<br />
+      75007 PARIS 07 SP
+    </address>
+  </li>
+</ul>
+<p>Pour contacter le délégué à la protection des données&nbsp;:</p>
+<ul>
+  <li>
+    par courriel&nbsp;: <a href="mailto:dpd@pm.gouv.fr">dpd@pm.gouv.fr</a>
+  </li>
+  <li>
+    par courrier postal&nbsp;:
+    <address>
+      Secrétariat Général du Gouvernement<br />
+      À l’attention du délégué à la protection des données (DPD)<br />
+      56 rue de Varenne<br />
+      75007 Paris
+    </address>
   </li>
 </ul>
 <p>
@@ -314,17 +336,25 @@ sousTitrePageStatique: 'En vigueur à partir du 04/03/2025'
   </li>
 </ul>
 <h2>Annexe – Critères d’éligibilité du catalogue</h2>
-<p>Vous représentez une entité publique (Etat, collectivité territoriale, OPSN) ou une association à but non lucratif établie en France, souhaitant agir pour la confiance numérique;
-</p>
 <p>
-Le dispositif que vous proposez : 
+  Vous représentez une entité publique (Etat, collectivité territoriale, OPSN)
+  ou une association à but non lucratif établie en France, souhaitant agir pour
+  la confiance numérique;
 </p>
+<p>Le dispositif que vous proposez :</p>
 <ul>
-<li>Aide des entités publiques et/ou privées à renforcer leur cybersécurité;</li>
-<li>N’est pas exclusivement destiné aux particuliers;</li>
-<li>A fait la preuve de sa performance et de son impact (nombre d’utilisation uniques, récurrence, retours utilisateurs);</li>
-<li>Dispose d’un accès gratuit qui va perdurer;</li>
-<li>Est facilement accessible et simple d’utilisation. </li>
+  <li>
+    Aide des entités publiques et/ou privées à renforcer leur cybersécurité;
+  </li>
+  <li>N’est pas exclusivement destiné aux particuliers;</li>
+  <li>
+    A fait la preuve de sa performance et de son impact (nombre d’utilisation
+    uniques, récurrence, retours utilisateurs);
+  </li>
+  <li>Dispose d’un accès gratuit qui va perdurer;</li>
+  <li>Est facilement accessible et simple d’utilisation.</li>
 </ul>
-<p>Nous recommandons de proposer des dispositifs Open Source et complets (pas d’évènements éphémères, flyers et autres).
+<p>
+  Nous recommandons de proposer des dispositifs Open Source et complets (pas
+  d’évènements éphémères, flyers et autres).
 </p>
