[NIS2] Ajoute la page "Directive NIS 2"

--- a/front/directive-nis2.html
+++ b/front/directive-nis2.html
@@ -2,6 +2,15 @@
 layout: defaut
 permalink: /directive-nis2/
 titreHtml: 'Directive NIS 2 | MesServicesCyber'
+styles:
+  - /assets/styles/dsfr.css
 ---
+
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/page-directive-nis2.js"
+></script>
+<div id="page-directive-nis2"></div>
 
 <p>À venir</p>
