[NIS2] Structure l’onglet `Solutions`

--- a/front/directive-nis2.html
+++ b/front/directive-nis2.html
@@ -4,6 +4,7 @@ permalink: /directive-nis2/
 titreHtml: 'Directive NIS 2 | MesServicesCyber'
 styles:
   - /assets/styles/dsfr.css
+  - /assets/styles/controle-segmente.css
 ---
 
 <script
