[NIS2] Affiche les items des solutions

--- a/front/directive-nis2.html
+++ b/front/directive-nis2.html
@@ -5,6 +5,7 @@ titreHtml: 'Directive NIS 2 | MesServicesCyber'
 styles:
   - /assets/styles/dsfr.css
   - /assets/styles/controle-segmente.css
+  - /assets/styles/carte-item.css
 ---
 
 <script
@@ -13,3 +14,5 @@ styles:
   src="/lib-svelte/dist/assets/page-directive-nis2.js"
 ></script>
 <div id="page-directive-nis2"></div>
+
+{% include script-donnees-json.html %}
