[SOIN] Extrais l'encart des biz dev
...actuellement utilisé dans l'accueil, pour le réutilisé en Svelte

--- a/front/accueil.html
+++ b/front/accueil.html
@@ -56,6 +56,12 @@ permalink: /
   src="/lib-svelte/dist/assets/carrousel-des-interlocuteurs.js"
 ></script>
 
+<script
+  type="module"
+  crossorigin
+  src="/lib-svelte/dist/assets/equipe-biz-dev.js"
+></script>
+
 <section class="organisations-concernees">
   <div class="contenu-section">
     <div class="toutes-organisations">
@@ -183,32 +189,12 @@ permalink: /
 
 <section class="interlocuteurs">
   <div class="contenu-section">
-    <div class="contenu-interlocuteurs">
-      <div id="carrousel-des-interlocuteurs" />
-    </div>
+    <div class="contenu-interlocuteurs" id="carrousel-des-interlocuteurs" />
   </div>
 </section>
 
 <section class="equipe-bizdev">
-  <div class="contenu-section">
-    <div class="photos">
-      <img src="/assets/images/floriane-bizdev.jpg" alt="Floriane Gallego" />
-    </div>
-    <h2>Notre équipe est à votre écoute</h2>
-    <p class="texte-standard-md">
-      Participer à un webinaire collectif de 45 minutes pour en savoir plus sur
-      MesServicesCyber, le test de maturité et le diagnostic cyber afin de mieux
-      protéger votre entité des cyberattaques.
-    </p>
-    <lab-anssi-lien
-      href="https://app.livestorm.co/lab-anssi/webinaire-cyberdepart"
-      variante="primaire"
-      apparence="bouton"
-      taille="md"
-      cible="_blank"
-      titre="Assister au webinaire"
-    ></lab-anssi-lien>
-  </div>
+  <div class="contenu-section" id="equipe-biz-dev" />
 </section>
 
 <section class="communaute-msc">
