[THEME] Remplace le gris des mentions
... par la variable DSFR `--text-mention-grey`. On applique, où on le peut, le style dsfr texte-mention-xs.

--- a/front/prestataires.html
+++ b/front/prestataires.html
@@ -42,7 +42,7 @@ styles:
           condition de sécurité.
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -70,7 +70,7 @@ styles:
           mesures de remédiation.
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -95,7 +95,7 @@ styles:
           malveillante.
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -119,7 +119,7 @@ styles:
           sécurisation, de maintenance et d’assistance en cas d’incident.
         </p>
         <div class="labels">
-          <span>cybermalveillance.gouv.fr</span>
+          <span class="texte-mention-xs">cybermalveillance.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -145,7 +145,7 @@ styles:
           partagées et attribuées à la demande.
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -170,7 +170,7 @@ styles:
           commanditaire.
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -196,7 +196,7 @@ styles:
           aux organisations des prestations sécurisées et reconnues par l’État
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
@@ -222,7 +222,7 @@ styles:
           sécurité nationale et des secteurs sensibles.
         </p>
         <div class="labels">
-          <span>cyber.gouv.fr</span>
+          <span class="texte-mention-xs">cyber.gouv.fr</span>
           <img
             alt="Ouvrir dans un nouvel onglet"
             src="/assets/images/icone-lien-externe.svg"
