[LANDING-DIAG][SOLUTIONS] Affiche les sections
...de l'onglet selection. N'affiche pas les guides pour le moment.

--- a/front/presentation-demande-diagnostic.html
+++ b/front/presentation-demande-diagnostic.html
@@ -4,6 +4,8 @@ permalink: /presentation-demande-diagnostic/
 titreHtml: 'Présentation Demande Diagnostic | MesServicesCyber'
 styles:
   - /assets/styles/dsfr.css
+  - /assets/styles/controle-segmente.css
+  - /assets/styles/carte-item.css
 ---
 
 <script
@@ -12,3 +14,5 @@ styles:
   src="/lib-svelte/dist/assets/presentation-demande-diagnostic.js"
 ></script>
 <div id="page-presentation-demande-diagnostic"></div>
+
+{% include script-donnees-json.html %}
